--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,6 +7,9 @@
     "default_popup": "popup.html",
     "default_icon": "icons/icon16.png"
   },
+  "host_permissions": [
+    "https://api.proxyapi.ru/*"
+  ],
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
@@ -22,7 +25,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "js": ["content.js", "background.js", "popup.js"],
       "run_at": "document_end"
     }
   ]
