--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "webpack-cli": "^6.0.1",
     "webpack-ext-reloader": "^1.1.13",
     "webpack-extension-reloader": "^1.1.4"
+  },
+  "dependencies": {
+    "webext-bridge": "^6.0.1"
   }
 }
